--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -1,35 +1,56 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">SyncTool</string>
-    <string name="SyncStatus_AnalyseFiles">Analysiere Dateien</string>
-    <string name="SyncStatus_ReadFilesA">Lese Dateien von Quelle A</string>
-    <string name="SyncStatus_ReadFilesB">Lese Dateien von Quelle B</string>
+
+    <string name="SyncStatus_NotStarted">Nicht gestarted</string>
     <string name="SyncStatus_ConnectA">Verbinde mit Quelle A</string>
     <string name="SyncStatus_ConnectB">Verbinde mit Quelle B</string>
-    <string name="SyncStatus_NotStarted">Nicht gestarted</string>
+    <string name="SyncStatus_ReadFilesA">Lese Dateien von Quelle A</string>
+    <string name="SyncStatus_ReadFilesB">Lese Dateien von Quelle B</string>
+    <string name="SyncStatus_AnalyseFiles">Analysiere Dateien</string>
     <string name="SyncStatus_CreateJobs">Beendet</string>
+
+
+
+    <string name="MainMenu_Exit">Verlassen</string>
+
     <string name="Button_StartAllJobs">Starte alle Aufgaben</string>
     <string name="Button_Cancel">Abbruch</string>
     <string name="Button_Back">Zurück</string>
     <string name="Button_Next">Weiter</string>
+
+
     <string name="Label_JobName">Name</string>
     <string name="Label_Active">Aufgabe ist aktiv</string>
+
+    <string name="Text_SelectConnectionType">Wähle  Verbindungstyp</string>
+    <string name="Caption_Connection_A">Verbindung A</string>
+    <string name="Caption_Connection_B">Verbindung B</string>
+
+    <string name="Text_ConnectionName">Wähle existierende Verbindung</string>
+
     <string name="Hint_JobName">Name der Aufgabe</string>
+    <string name="Hint_NameConnection">Verbindungsname</string>
+
     <string name="Value_Active">Aktiv</string>
     <string name="Value_NotActive">Nicht aktiv</string>
+
     <string name="Caption_GeneralJobSettings">Allgemeine Einstellungen</string>
     <string name="Caption_SourceTargetSettings">Quell- und Zieleinstellungen</string>
+
     <string name="Toast_JobExist">Aufgabe mit Name \'%1$s\' existiert bereits</string>
     <string name="Toast_JobNameIsEmpty">Name der Aufgabe ist leer</string>
     <string name="Toast_JobNameIsInvalid">Name der Aufgabe ist ungültig</string>
 
-    <string-array name="ConnectionTypes">
-        <item>Lokal</item>
-        <item>OwnCloud</item>
-    </string-array>
-    <string name="Caption_Connection_A">Verbindung A</string>
-    <string name="Caption_Connection_B">Verbindung B</string>
-    <string name="Text_ConnectionName">Wähle existierende Verbindung</string>
-    <string name="Text_SelectConnectionType">Wähle  Verbindungstyp</string>
-    <string name="MainMenu_Exit">Verlassen</string>
+    <string name="ConnectionTestStatus_AccessDenied">Zugriff verweigert</string>
+    <string name="ConnectionTestStatus_AccessGranted">Zugriff gewährt</string>
+
+
+
+
+
+
+
+
+
+    <!-- DEBUG -->
 </resources>
