Implement feature to browse paths

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="Button_Ok">OK</string>
 
     <string name="Button_Add" translatable="false">+</string>
+    <string name="Button_Browse" translatable="false">B</string>
     <string name="Button_Scan" translatable="false">S</string>
 
     <string name="Label_JobName">Name</string>
