Context Menu "Run"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,6 +86,7 @@
     <string name="ContextM_SelectAction">Select Action</string>
     <string name="ContextM_Edit">Edit</string>
     <string name="ContextM_Delete">Delete</string>
+    <string name="ContextM_Run">Run</string>
 
     <string name="Checkbox_AskPassword_NextTime">Ask password at next time</string>
     <string name="Checkbox_UseFTPS">Use FTPs</string>
